# xdevops

./: README.md  docker-compose.yml
blackjack_api/: manage.py  pyproject.toml
blackjack_api/core/: views.py
django_api/: .env.sample  Dockerfile  manage.py  pyproject.toml  start.sh
django_api/core/: serializers.py  urls.py  views.py
django_api/core/migrations/: 0001_initial.py
django_api/django_api/: settings.py  urls.py
